--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "next": "15.0.3",
+    "nodemailer": "^6.9.16",
+    "otp-generator": "^4.0.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "zod": "^3.23.8"
@@ -22,6 +25,8 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
+    "@types/otp-generator": "^4.0.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
