--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "15.0.3",
     "nodemailer": "^6.9.16",
     "otp-generator": "^4.0.1",
+    "qrcode": "^1.5.4",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "zod": "^3.23.8"
@@ -27,6 +28,7 @@
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/otp-generator": "^4.0.2",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
